[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["akaswenwilk <aaron.kaswen-wilk@solarisbank.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.9.0", features = ["full"] }
regex = "1"
